# IEEE-3335

./: .gitignore  P3335 Work Products.md  README.md
01 - Overview/: A TimeCard Driver’s World (20250501).md  README.md
02 - Normative References/: README.md
03 - Definitions, Acronyms and Abbreviations/: README.md
04 - Conformance/: README.md
05 - Architecture/: Architecture introduction.docx  Architecture introduction.md  README.md  TimeCard Architecture Text (20250504).md
06 - Performance Specifications/: README.md
07 - Timing Interfaces/: README.md
08 - Control Interfaces/: README.md
09 - Environment/: Information model top level 20241120.md  README.md
10 - Applications and Best Practices/: README.md  TimeCard Use Cases - Fundamental  (20250329).md
Annex A - Metrics/: README.md
Annex B - Test Procedures/: README.md
Annex C - Bibliography/: README.md
Unsorted/: DPLL API P3335 Presentation.md  Event Ordering in Distributed Systems (20230728).md  Information model top level 20241120.docx  MD-Architectural suggestions of P3335 TimeCard standard.md  Metrics-Minimum for Time and Frequency.md  P3335 1PPS Requirement.docx  P3335 1PPS Requirement.md  P3335 Architecture Contribution.docx  P3335 Architecture Contribution.docx.md  P3335 Architecture Contribution.md  P3335 HW Interfaces.docx  P3335 HW Interfaces.md  P3335 Preso on Financial Industry regulations.md  P3335 and Drivers.md  (+8 more)
scripts/: README.md  check_python.py  check_torch.py  pyproject.toml
scripts/ieee_3335_tools/: __init__.py  cli.py  docx_extractor.py  pdf_extractor.py  pptx_extractor.py
(+6 files in other folders)
